Correct styling of toplevel lists on mobile.

--- a/resources/public/toto.css
+++ b/resources/public/toto.css
@@ -5,6 +5,11 @@
 body, table, select, input {
     margin: 0px;
     padding: 0px;
+    font-size: 14px;
+}
+
+body {
+    display: flex;
 }
 
 .addr {
@@ -21,14 +26,6 @@ input {
     padding: 4px;
 }
 
-input[type="text"] {
-    font-size: 18px;
-}
-
-input[type="password"] {
-    font-size: 18px;
-}
-
 table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -43,11 +40,12 @@ body {
     font-family: Roboto,Helvetica,sans-serif;
     line-height:1.2;
 
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 .header {
-    flex: 0 0 auto;
+    flex: 0;
 
     z-index: 1;
 
@@ -62,6 +60,8 @@ body {
 }
 
 .contents {
+    flex: 1;
+
     background: white;
 
     overflow-y: hidden;
@@ -70,7 +70,6 @@ body {
 
     display: flex;
     flex-direction: column;
-    flex: 1;
 }
 
 .footer {
@@ -134,15 +133,15 @@ body {
 }
 
 .scrollable {
+    flex: 1;
     overflow-y: scroll;
-    height: 100%;
 }
 
 .new-item-form {
     display: flex;
     flex-direction: row;
-    margin: 0px;
-    padding: 6px;
+    margin: 6px;
+    padding: 0px;
 
     align-items: center;
     width: 100%;
@@ -351,6 +350,13 @@ A {
     padding-right: 0.5em;
 }
 
+.todo-list, .list-list.toplevel-list {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    overflow-y: hidden;
+}
+
 /* Toplevel list styling */
 
 .toplevel-list tr {
@@ -358,14 +364,19 @@ A {
 }
 
 .toplevel-list td {
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
+    padding-top: 0.45em;
+    padding-bottom: 0.45m;
 }
 
 
 .toplevel-list .item-description {
     width: 100%;
     white-space: normal;
+}
+
+.snooze-control {
+    text-align: center;
+    font-style: italic;
 }
 
 /* List list styling */
